# googletest

./: CMakeLists.txt  README.md  codecov.yml
.github/workflows/: core.yml
app/: CMakeLists.txt  main.cc
cmake/: default-toolchain.cmake
includes/: fact.hpp  two.hpp
lib/: CMakeLists.txt  fact.cc  two.cc
tests/: CMakeLists.txt  main.cc
